# deckfusion-landing

./: .gitignore  Dockerfile  Makefile  README.md  mypy.ini  package-lock.json  package.json  pyproject.toml  requirements.txt  tailwind.config.js
config/: settings.py  urls.py
pages/: apps.py  urls.py  views.py
pages/templates/pages/: contact.html  home.html  index.html
pages/templates/pages/partials/: base_footer.html  base_header.html  base_page.html
scripts/: entrypoint-web.sh  entrypoint.sh
static/css/: tailwind.css
static/js/: confetti.js  contact.js  hamburger.js
