[tool.poetry]
name = "deckfusion-landing"
version = "0.1.0"
description = "A Django server for the DeckFusion landing page"
authors = ["Sean O'Leary <seamicole@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
channels = "^4.1.0"
django = "^5.1.3"
python = "^3.10.12"
python-decouple = "^3.8"
uvicorn = "^0.32.0"
whitenoise = "^6.8.2"

[tool.poetry.group.dev.dependencies]
black = "^23.11.0"
django-stubs = "^5.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
